--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
     "vue": "^3.4.35"
   },
   "devDependencies": {
@@ -20,6 +22,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.27.0",
     "globals": "^15.9.0",
+    "sass": "^1.77.6",
     "vite": "^5.4.0",
     "vue-eslint-parser": "^9.4.3"
   }
